--- a/src/components/footer/Links.astro
+++ b/src/components/footer/Links.astro
@@ -1,4 +1,4 @@
-<ul>
+<ul class="list-none">
     <li class="hover:text-white">
         <a href="/services-online">Online coaching</a>
     </li>
@@ -7,7 +7,12 @@
     </li>
     <li class="hover:text-white">
         <a href="/services-online"
-            >Program de recuperare pentru durerea de spate</a
+            >Program de dezvoltare musculară</a
+        >
+    </li>
+    <li class="hover:text-white">
+        <a href="/services-online"
+            >Detalii despre programul de dezvoltare musculară</a
         >
     </li>
     <li class="hover:text-white">
