--- a/src/pages/about-online-program.astro
+++ b/src/pages/about-online-program.astro
@@ -8,8 +8,8 @@ const description = "Despre programul online de hipertrofie musculară"
 
 <Layout title={title} description={description}>
   <Section class="text-justify">
-    <h1 class="text-center mt-20">
-      Programul Complet de Dezvoltare Musculara - Maximizarea Hipertrofiei Musculare
+    <h1 class="page-title">
+      Programul Complet de Dezvoltare Musculară - Maximizarea Hipertrofiei Musculare
     </h1>
     <p>
       Trebuie sa înțelegi că programul pe care urmează să-l
@@ -28,7 +28,7 @@ const description = "Despre programul online de hipertrofie musculară"
       astfel încât tot procesul să fie <strong>sustenabil</strong>,
       să te bucuri de el și să ai aderență pe termen lung.
       Pentru asta e necesar ca:
-      <ul class="columns-2">
+      <ul class="md:columns-2">
         <li><span>intensitatea și volumul să fie optimizate,</span></li>
         <li><span>zilele de repaus să fie suficiente,</span></li>
         <li><span>să ai o alimentație corespunzătoare,</span></li>
@@ -41,7 +41,6 @@ const description = "Despre programul online de hipertrofie musculară"
     <!-- Cui se adreseaza -->
   <Section class="text-justify">
     <SectionHeader title="Cine poate beneficia de program?" />
-    <h2 class="mt-8 lg:mt-12">Cine poate beneficia de program?</h2>
     <p>Programul se adresează atât femeilor, cât și bărbaților. Mai ales femeile nu trebuie să se teamă să se antreneze cu greutăți și să-și dezvolte musculatura! O femeie care se antrenează cu greutăți în sală și care își stimulează musculatura, are un corp feminin, frumos structurat și dezvoltat. Sub nicio formă asta nu înseamnă o pierdere de feminitate! Femeile care ți se pare că își pierd feminitatea pentru că au mușchii foarte mult dezvoltați, în 99% din cazuri consumă substanțe anabolizante. O femeie care se antrenează natural va avea un corp de 20 de ori mai frumos decât o femeie care nu face niciun fel de activitate fizică. În cazul bărbaților sper că totul e clar!</p>
   </Section>
   <Section type="light" wide>
