--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -16,7 +16,7 @@ const description =
 
 <Layout title={title} description={description}>
     <Section>
-        <h1 class="mt-20 text-center">
+        <h1 class="page-title">
             Te învăț cum să-ți dezvolți eficient musculatura
         </h1>
         <div class="mt-5">
