Add Online Programs section.

--- a/src/components/CollabGymCTA.astro
+++ b/src/components/CollabGymCTA.astro
@@ -2,4 +2,7 @@
 import Cta from "../elements/CTA.astro";
 ---
 
-<Cta href="https://forms.gle/EUxkqeyyrw25pSdAA">Vreau colaborare la sală</Cta>
+<Cta
+  style="bg-slate-200 hover:bg-slate-100"
+  href="https://forms.gle/EUxkqeyyrw25pSdAA">Vreau colaborare la sală</Cta
+>
