--- a/src/components/CollabOnlineCTA.astro
+++ b/src/components/CollabOnlineCTA.astro
@@ -2,4 +2,4 @@
 import Cta from "../elements/CTA.astro";
 ---
 
-<Cta href="https://forms.gle/pPPq2Qf8d1fbLbAT9">Vreau colaborare online</Cta>
+<Cta href="https://forms.gle/pPPq2Qf8d1fbLbAT9">Vreau online coaching</Cta>
