--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,37 +5,35 @@ import CollabOnlineCTA from "./CollabOnlineCTA.astro";
 import CollabGymCTA from "./CollabGymCTA.astro";
 
 const heroLayer =
-    '<div class="absolute bottom-0 h-2/5 w-full lg:right-0 lg:h-full lg:w-1/3 bg-secondary-500" />';
+  '<div class="absolute bottom-0 h-2/5 w-full lg:right-0 lg:h-full lg:w-1/3 bg-secondary-500" />';
 ---
 
 <section class="relative h-screen bg-white overflow-hidden">
-    <main
-        class="relative z-10 px-8 lg:ml-25 w-full h-full flex flex-col lg:flex-row"
+  <main
+    class="relative z-10 px-8 lg:ml-25 w-full h-full flex flex-col lg:flex-row"
+  >
+    <div
+      class="flex flex-col flex-[3_1_0%] font-serif justify-center mt-20 lg:mt-0 lg:pl-20 z-20"
     >
-        <div
-            class="flex flex-col flex-[3_1_0%] font-serif justify-center mt-20 lg:mt-0 lg:pl-20 z-20"
-        >
-            <h1>Recapătă controlul asupra corpului tău</h1>
-            <p>
-                Te ajut să te bucuri de beneficiile <strong>
-                    kinetoterapiei și ale antrenamentelor personalizate de
-                    fitness
-                </strong> pentru a prelua controlul asupra vieții și sănătății
-                tale!
-            </p>
-            <div class="flex flex-col md:flex-row gap-3 py-3">
-                <CollabOnlineCTA />
-                <CollabGymCTA />
-            </div>
-        </div>
-        <div
-            class="flex flex-[2_1_0%] max-h-[50%] lg:max-h-none lg:h-full items-end justify-end"
-        >
-            <Image
-                src={HeroImage}
-                alt="Stefan Rusu"
-                class="object-contain lg:object-cover overflow-visible h-full lg:max-h-[800px]"
-            />
-        </div>
-    </main>
+      <h1>Recapătă controlul asupra corpului tău</h1>
+      <p>
+        Te ajut să te bucuri de beneficiile <strong>
+          kinetoterapiei și ale antrenamentelor personalizate de fitness
+        </strong> pentru a prelua controlul asupra vieții și sănătății tale!
+      </p>
+      <div class="flex flex-col md:flex-row gap-3 py-3">
+        <CollabOnlineCTA />
+        <CollabGymCTA />
+      </div>
+    </div>
+    <div
+      class="flex flex-[2_1_0%] max-h-[50%] lg:max-h-none lg:h-full items-end justify-end"
+    >
+      <Image
+        src={HeroImage}
+        alt="Stefan Rusu"
+        class="object-contain lg:object-cover overflow-visible h-full lg:max-h-[800px]"
+      />
+    </div>
+  </main>
 </section>
