Update Index file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import Section from "../layouts/Section.astro";
 import P from "../elements/P.astro";
 import Hero from "../components/Hero.astro";
+import OnlinePrograms from "@/components/OnlinePrograms.astro";
 import Features from "../components/Benefits.astro";
 import AboutMe from "../components/AboutMe.astro";
 import Values from "../components/Values.astro";
@@ -19,6 +20,7 @@ const description =
 
 <Layout title={title} description={description}>
   <Hero />
+  <OnlinePrograms />
   <Section type="dark" wide>
     <P style="text-center">
       Recuperarea prin kinetoterapie este complementară cu condiționarea fizică
